# src/api/handlers/test_handler.go
@@ -164,7 +164,7 @@ func (h *TestHandler) BodyBinder(c *gin.Context) {
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest,
 			helper.GenerateBaseResponseWithValidationError(nil,
-				false, helper.ValidationError, err))
+				false, int(helper.ValidationError), err))
 		return
 	}
 	c.JSON(http.StatusOK, helper.GenerateBaseResponse(gin.H{
@@ -187,7 +187,7 @@ func (h *TestHandler) FileBinder(c *gin.Context) {
 	err := c.SaveUploadedFile(file, "file")
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusInternalServerError,
-			helper.GenerateBaseResponseWithError(nil, false, helper.ValidationError, err))
+			helper.GenerateBaseResponseWithError(nil, false, int(helper.ValidationError), err))
 		return
 	}
 	c.JSON(http.StatusOK, helper.GenerateBaseResponse(gin.H{
