# src/docs/swagger.yaml
@@ -78,11 +78,10 @@ definitions:
     type: object
   helper.BaseHttpResponse:
     properties:
-      error:
-        type: string
+      error: {}
       result: {}
       resultCode:
-        $ref: '#/definitions/helper.ResultCode'
+        type: integer
       success:
         type: boolean
       validationErrors:
@@ -90,28 +89,6 @@ definitions:
           $ref: '#/definitions/validation.ValidationError'
         type: array
     type: object
-  helper.ResultCode:
-    enum:
-    - 0
-    - 40001
-    - 40101
-    - 40301
-    - 40401
-    - 42901
-    - 42902
-    - 50001
-    - 50002
-    type: integer
-    x-enum-varnames:
-    - Success
-    - ValidationError
-    - AuthError
-    - ForbiddenError
-    - NotFoundError
-    - LimiterError
-    - OtpLimiterError
-    - CustomRecovery
-    - InternalError
   validation.ValidationError:
     properties:
       message:
